--- a/src/components/select-field/select-field-styles.scss
+++ b/src/components/select-field/select-field-styles.scss
@@ -1,69 +1,55 @@
-// -------------------------------------------------
+// =================================================
 // Tokens
-// -------------------------------------------------
-$color-text: #495057;
+// =================================================
+$color-text:   #495057;
 $color-border: #ced4da;
-$color-muted: #6c757d;
+$color-muted:  #6c757d;
 $color-danger: #b30009;
-$focus-border: #80bdff;
-$focus-glow: rgba(128, 189, 255, 0.5);
 
+$focus-border: #80bdff;
+$focus-glow:   rgba(128, 189, 255, 0.5);
+
+$label-xs: 0.75rem;
 $label-sm: 0.875rem;
-$label-default: 1rem;
 $label-lg: 1.125rem;
 
 $col-form-ptb: calc(0.375rem + 1px);
 
-// arrows (Bootstrap-like) for custom-select
+// Carets (Bootstrap-like)
 $down-caret-danger: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23b30009' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
-$custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
+$custom-caret:      url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
 
-// -------------------------------------------------
-// Helpers
-// -------------------------------------------------
+// =================================================
+// Helpers / Mixins
+// =================================================
 @mixin placeholder-color($c) {
-  &::-webkit-input-placeholder {
-    color: $c;
-  }
-  &:-moz-placeholder {
-    color: $c;
-    opacity: 1;
-  }
-  &::-moz-placeholder {
-    color: $c;
-    opacity: 1;
-  }
-  &:-ms-input-placeholder {
-    color: $c;
-  }
-  &::-ms-input-placeholder {
-    color: $c;
-  }
-  &::placeholder {
-    color: $c;
-  }
+  &::-webkit-input-placeholder { color: $c; }
+  &:-moz-placeholder           { color: $c; opacity: 1; }
+  &::-moz-placeholder          { color: $c; opacity: 1; }
+  &:-ms-input-placeholder      { color: $c; }
+  &::-ms-input-placeholder     { color: $c; }
+  &::placeholder               { color: $c; }
 }
 
-// -------------------------------------------------
-// Label sizing
-// -------------------------------------------------
-.label-sm {
-  font-size: $label-sm !important;
-}
-.label-default {
-  font-size: $label-default !important;
-}
-.label-lg {
-  font-size: $label-lg !important;
+// Label font-size utilities
+.label-xs { font-size: $label-xs !important; }
+.label-sm { font-size: $label-sm !important; }
+.label-lg { font-size: $label-lg !important; }
+
+// Bootstrap col-form-label base
+.col-form-label {
+  padding-top: $col-form-ptb;
+  padding-bottom: $col-form-ptb;
+  margin-bottom: 0;
+  font-size: inherit;
+  line-height: 1.5;
 }
 
-// -------------------------------------------------
-// Horizontal / Inline layout
-// -------------------------------------------------
+// =================================================
+// Horizontal / Inline Layout
+// =================================================
 .horizontal {
-  .form-group {
-    padding: 5px;
-  }
+  .form-group { padding: 5px; }
 
   label {
     display: flex;
@@ -72,9 +58,7 @@ $custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.
     margin-bottom: 0;
     position: relative;
 
-    &.align-right {
-      justify-content: right;
-    }
+    &.align-right { justify-content: right; }
   }
 
   .form-group .form-control-label,
@@ -103,45 +87,25 @@ $custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.
 
 // Adjust invalid label spacing within horizontal/inline
 .horizontal .form-group .form-control-label.invalid,
-.inline .form-group .form-control-label.invalid {
+.inline     .form-group .form-control-label.invalid {
   position: relative;
   align-items: normal;
-  padding-top: 12px;
-}
-
-// Bootstrap col-form-label base
-.col-form-label {
-  padding-top: $col-form-ptb;
-  padding-bottom: $col-form-ptb;
-  margin-bottom: 0;
-  font-size: inherit;
-  line-height: 1.5;
+  // padding-top: 12px; // (kept for reference)
 }
 
 // Align by size in inline/horizontal
 .inline,
 .horizontal {
-  .form-control-label {
-    align-items: start !important;
-    padding-top: 6px !important;
-  }
-  .label-sm {
-    align-items: start !important;
-    padding-top: 5px !important;
-  }
-  .label-default {
-    align-items: start !important;
-    padding-top: 7px !important;
-  }
-  .label-lg {
-    align-items: start !important;
-    padding-top: 9px !important;
-  }
+  .form-control-label { align-items: start !important; padding-top: 6px !important; }
+  .label-xs          { align-items: start !important; padding-top: 4px !important; }
+  .label-sm          { align-items: start !important; padding-top: 5px !important; }
+  label              { align-items: start !important; padding-top: 7px !important; }
+  .label-lg          { align-items: start !important; padding-top: 9px !important; }
 }
 
-// -------------------------------------------------
-// Custom select (Bootstrap-like)
-// -------------------------------------------------
+// =================================================
+// Custom Select (Bootstrap-like)
+// =================================================
 .custom-select {
   display: inline-block;
   width: 100%;
@@ -173,26 +137,21 @@ $custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.
     background-color: #e9ecef;
   }
 
-  // Hide IE11 caret
-  &::-ms-expand {
-    opacity: 0;
-  }
+  &::-ms-expand { opacity: 0; } // Hide IE11 caret
 }
 
-// -------------------------------------------------
-// Validation feedback + state
-// -------------------------------------------------
+// =================================================
+// Validation feedback + states
+// =================================================
 .invalid-feedback {
   color: $color-danger;
   margin-top: 0.25rem;
   font-size: 0.75rem;
 }
 
-.invalid {
-  color: $color-danger;
-}
+.invalid { color: $color-danger; }
 
-// Border + caret color in invalid state
+// Border + caret in invalid state
 .form-select:invalid,
 .form-select.is-invalid,
 .custom-select:invalid,
@@ -216,7 +175,7 @@ $custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.
   background-color: transparent;
 }
 
-// Remove background arrow/extra padding for lists (multi or tall)
+// Remove arrow/padding for lists (multi or tall)
 .form-select.is-invalid[multiple],
 .form-select.is-invalid[size]:not([size='1']):first-child,
 .custom-select.is-invalid[multiple],
@@ -226,7 +185,7 @@ $custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.
   padding-right: 0 !important;
 }
 
-// Base lists (multi/tall) never show the caret image
+// Base lists (multi/tall) never show the caret
 .form-select[multiple],
 .form-select[size]:not([size='1']),
 .custom-select[multiple],
@@ -235,10 +194,45 @@ $custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.
   background-image: none;
 }
 
-// Red text color for invalid single selects (Bootstrap parity)
+// Red text for invalid single selects (Bootstrap parity)
 .was-validated .form-select:invalid:not([multiple]):not([size]),
 .was-validated .form-select:invalid:not([multiple])[size='1'],
 .form-select.is-invalid:not([multiple]):not([size]),
 .form-select.is-invalid:not([multiple])[size='1'] {
   color: $color-danger;
+}
+
+// =================================================
+// :has() label alignment helpers (DRY)
+// =================================================
+@supports selector(:has(*)) {
+  // Base mixin: sync padding-top for labels when a specific select is present.
+  @mixin has-select-label-pt($sel, $pt) {
+    .form-group:has(> #{$sel}) > label.form-control-label { padding-top: $pt !important; }
+    .row.form-group:has(#{$sel})  label.form-control-label { padding-top: $pt !important; }
+  }
+
+  // Size-class variant for labels (.label-xs / .label-sm / .label-lg)
+  @mixin has-select-label-size-pt($sel, $size-class, $pt) {
+    .form-group:has(> #{$sel}) > label.form-control-label.#{$size-class} { padding-top: $pt !important; }
+    .row.form-group:has(#{$sel})  label.form-control-label.#{$size-class} { padding-top: $pt !important; }
+  }
+
+  // ---------- Default .form-select ----------
+  @include has-select-label-pt('select.form-select', 10px);
+  @include has-select-label-size-pt('select.form-select', label-sm, 10px);
+  @include has-select-label-size-pt('select.form-select', label-xs, 11px);
+  @include has-select-label-size-pt('select.form-select', label-lg, 5px);
+
+  // ---------- Small .form-select-sm ----------
+  @include has-select-label-pt('select.form-select.form-select-sm', 4px);
+  @include has-select-label-size-pt('select.form-select.form-select-sm', label-sm, 4px);
+  @include has-select-label-size-pt('select.form-select.form-select-sm', label-xs, 6px);
+  @include has-select-label-size-pt('select.form-select.form-select-sm', label-lg, 1px);
+
+  // ---------- Large .form-select-lg ----------
+  @include has-select-label-pt('select.form-select.form-select-lg', 14px);
+  @include has-select-label-size-pt('select.form-select.form-select-lg', label-sm, 14px);
+  @include has-select-label-size-pt('select.form-select.form-select-lg', label-xs, 16px);
+  @include has-select-label-size-pt('select.form-select.form-select-lg', label-lg, 11px);
 }
